@@ -467,6 +467,7 @@ static wxPlINH inherit[] =
 #endif
     I( Font,            GDIObject )
     I( Region,          GDIObject )
+    I( RegionIterator,  Object    )
     I( Bitmap,          GDIObject )
     I( Pen,             GDIObject )
     I( Palette,         GDIObject )
@@ -3467,7 +3468,7 @@ _get_packages()
 #if wxPERL_USE_DATETIME
     "use Wx::DateTime;"
 #endif
-#if wxPERL_USE_DATAVIEW && wxUSE_DATAVIEW && WXPERL_W_VERSION_GE( 2, 9, 0 )
+#if wxPERL_USE_DATAVIEW && wxUSE_DATAVIEWCTRL && WXPERL_W_VERSION_GE( 2, 9, 0 )
     "use Wx::DataView;"
 #endif
 #if wxPERL_USE_MEDIA && wxUSE_MEDIACTRL && WXPERL_W_VERSION_GE( 2, 6, 0 )
